Update kernel translation (#30)
* Remove old Main file for kernelize

Remove old Main file for the kernelize binary in preparation for
revising the executable to not use PASTA to find RCU macro usage.

* Remove KernelCodeGenVisitorMixin

Remove KernelCodeGenVisitorMixin since it uses outdated the VAST API.

* Add RCUCollector

Add RCUCollector for using Clang AST matchers to collect RCU macro usage
instead of using PASTA APIs. Right now it only collects usages of
rcu_dereference() and we will add additional parts of the RCU API back
to the binary later.

* Add new kernelize entry point

Add new kernelize entry point that is a Clang frontend and no longer
uses PASTA for parsing C ASTs.

* Don't use full namespace qualifiers

Don't use the `clang::ast_matchers` qualifiers since we are `using` that
namespace anyway.

* Remove unused include

* Use EXIT_FAILURE and add used include

* Link to macroni_common for driver generator

* Remove deprecated MLIR header

* Only link to macroni_settings for dependencies

* Comment out rewriters that use PASTA

Comment out rewriters that use PASTA for now while we work to
reimplement those rewriters targets in the kernel visitor.

* Remove deprecated MLIR header

* Add Kernel translation dirs

* Add CMake for Kernel translation include dir

* Start adding kernel visitor

Start adding the kernel visitor for lowering RCU macro usage to MLIR
without PASTA. So far only rcu_dereference() is implemented and we will
implement more soon.

* Add CMake for kernel visitor

* Revise CMake for kernelize executable

Revise CMake for kernelize executable to use new kernel visitor and
Clang AST matchers instead of PASTA.

* Add KernelASTVisitor

Add KernelASTVisitor for translating each translation unit to MLIR. This
ensures that we can translate ASTs without segfaulting if they do not
contain any kernel ops.

* Remove translation from RCUCollector

Remove translation logic from R

--- a/bin/Kernelize/CMakeLists.txt
+++ b/bin/Kernelize/CMakeLists.txt
@@ -1,17 +1,20 @@
 set(LLVM_LINK_COMPONENTS Core Support AsmParser)
 
-add_executable(kernelize
-    Main.cpp
-)
-llvm_update_compile_flags(kernelize)
+set(MACRONI_ORIGINAL_LLVM_RUNTIME_OUTPUT_INTDIR ${LLVM_RUNTIME_OUTPUT_INTDIR})
 
-target_link_libraries(kernelize
-    PRIVATE
-        macroni_api
-        MLIRMacroni
-        MLIRKernel
-        kernel_conversion
-        VASTCodeGen
-)
+set(LLVM_RUNTIME_OUTPUT_INTDIR ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>)
+add_clang_executable(kernelize Kernelize.cpp)
 
+set(LLVM_RUNTIME_OUTPUT_INTDIR ${MACRONI_ORIGINAL_LLVM_RUNTIME_OUTPUT_INTDIR})
+
+target_link_libraries(
+  kernelize
+  PRIVATE macroni_settings
+          macroni_common
+          kernel_translation_api
+          rcu_matchers
+          rcu_analyzer
+          kernel_consumer
+          MLIRKernel
+          kernel_conversion)
 mlir_check_link_libraries(kernelize)
