Explicitly link to PASTA
Explicitly link PASTA to Macroni targets which use them.

--- a/bin/Macronify/CMakeLists.txt
+++ b/bin/Macronify/CMakeLists.txt
@@ -4,7 +4,8 @@ add_executable(macronify Macronify.cpp ParseAST.cpp)
 
 llvm_update_compile_flags(macronify)
 
-target_link_libraries(macronify PRIVATE macroni_settings macroni_common
-                                        macroni_translation_api MLIRMacroni)
+target_link_libraries(
+  macronify PRIVATE macroni_settings pasta pasta_cxx_settings macroni_common
+                    macroni_translation_api MLIRMacroni)
 
 mlir_check_link_libraries(macronify)
