Remove empty visitor
Remove the empty visitor since vast's fallback visitor classes implement
its functionality already.

--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Copyright (c) 2024-present, Trail of Bits, Inc.
 
-add_library(macroni_common STATIC EmptyVisitor.cpp MacroniMetaGenerator.cpp)
+add_library(macroni_common STATIC MacroniMetaGenerator.cpp)
 target_link_libraries(macroni_common PUBLIC macroni_settings)
